--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ flake8
 flake8-quotes
 flake8-variables-names
 pep8-naming
+psycopg
+psycopg-binary
 django-debug-toolbar
 djangorestframework
 djangorestframework-simplejwt
