--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     env_file:
       - .env
     ports:
-      - "8001:8000"
+      - "8000:8000"
     command: >
       sh -c "python manage.py wait_for_db &&
       python manage.py migrate &&
@@ -13,6 +13,7 @@ services:
     volumes:
       - ./:/app
       - my_media:/files/media
+      - my_static:/files/static
     depends_on:
       - db
 
@@ -31,3 +32,4 @@ services:
 volumes:
   my_db:
   my_media:
+  my_static:
